# unimath

./: CMakeLists.txt
include/: fourier.hpp  fraction.hpp  latex.hpp  matrix.hpp  polynom.hpp  pretty_numbers.hpp  types.hpp
src/: fourier.cpp  fraction.cpp  latex.cpp  polynom.cpp  pretty_numbers.cpp
test/: bisection.cpp  nodal_test.cpp  test.cpp  test2.cpp  test3.cpp  test4.cpp
